test_suite/invalid/syntaxErr/while/breakOutsideWhile.wacc
# break is called outside a while loop

# Output:
# #syntax_error#

# Exit:
# 100

# Program:

begin
  break
end